--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
     --card-foreground: 210 4% 90%;
     --popover: 216 6% 12%;
     --popover-foreground: 210 4% 90%;
-    --primary: 209 84% 60%;
+    --primary: 42 59% 64%; /* #d2aa68 */
     --primary-foreground: 210 4% 98%;
     --secondary: 216 6% 24%;
     --secondary-foreground: 210 4% 98%;
@@ -22,8 +22,8 @@
     --destructive-foreground: 210 4% 98%;
     --border: 216 6% 18%;
     --input: 216 6% 18%;
-    --ring: 209 84% 60%;
-    --chart-1: 142 71% 45%;
+    --ring: 42 59% 64%;
+    --chart-1: 120 70% 50%;
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
@@ -37,7 +37,7 @@
     --card-foreground: 210 4% 90%;
     --popover: 216 6% 12%;
     --popover-foreground: 210 4% 90%;
-    --primary: 209 84% 60%;
+    --primary: 42 59% 64%; /* #d2aa68 */
     --primary-foreground: 210 4% 98%;
     --secondary: 216 6% 24%;
     --secondary-foreground: 210 4% 98%;
@@ -49,8 +49,8 @@
     --destructive-foreground: 210 4% 98%;
     --border: 216 6% 18%;
     --input: 216 6% 18%;
-    --ring: 209 84% 60%;
-    --chart-1: 142 71% 45%;
+    --ring: 42 59% 64%;
+    --chart-1: 120 70% 50%;
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
